update notebook to use Path

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -46,8 +46,10 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "from pathlib import Path\n",
     "\n",
-    "books_df = pd.read_csv('books.csv.gz')\n",
+    "data_path = Path('data/books.csv.gz')\n",
+    "books_df = pd.read_csv(data_path)\n",
     "books_df.shape"
    ]
   },
@@ -1627,7 +1629,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8f77e44b000da17aedc06f1ff3965e26eabbf68445eca31f3646441991bf162e"
+    "hash": "7f375f90bd3742643e7e694e83f64f1a04174318ea159b4f5598b31655ead56a"
    }
   }
  },
