update cleaning summary in explore.ipynb notebook

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -1552,24 +1552,25 @@
    "source": [
     "## Cleaning Summary\n",
     "\n",
-    "**PublicationYear**\n",
-    "- 2971 records have a PublicationYear = 0. We will remove these records.\n",
-    "- 2 records have a PublicationYear = 9999. We will remove these records.\n",
-    "- 4 records have a PublicationYear = 2109. This is probably a typo. We will \n",
-    "update these records to PublicationYear = 2019.\n",
     "\n",
+    "1. Remove unneeded columns (ISBN, ReportDate)\n",
+    "1. Remove records with empty and invalid PuublicationYear or ItemCollection.\n",
+    "   - 2971 records have a PublicationYear = 0. We will remove these records.\n",
+    "   - 2 records have a PublicationYear = 9999. We will remove these records.\n",
+    "   - 140 records with no value for ItemCollection. We will remove these records.\n",
+    "1. Update incorrect values (PublicationYear 2109 -> 2019)\n",
+    "   - 4 records have a PublicationYear = 2109. This is probably a typo. We will update these records to PublicationYear = 2019.\n",
+    "1. Add genre and audience columns:\n",
     "\n",
-    "**ItemCollection**\n",
-    "Create two new columns.\n",
-    "- Genre:\n",
-    "    - **Fiction**: ['Adult Fiction', 'Mystery',\n",
+    "Genre:\n",
+    "- **Fiction**: ['Adult Fiction', 'Mystery',\n",
     "       'Older Teen Fiction', 'Younger Teen  Fiction',\n",
     "       'Science Fiction', \"Children's Fiction\", 'Western',\n",
     "       'Urban Fiction', 'Bestsellers', 'Storytime Collection']\n",
-    "    - **Non-Fiction**: ['Adult Non-Fiction','Teen Non-Fiction', \"Children's Non-Fiction\",\n",
+    "- **Non-Fiction**: ['Adult Non-Fiction','Teen Non-Fiction', \"Children's Non-Fiction\",\n",
     "       'Natural Resources', 'Kentucky History','Adult Reference','Government Documents',\n",
     "       'Telereference',\"Children's Reference\", 'Teen Reference',  \"Children's Non-Fiction Paperback\"]\n",
-    "    - **Unknown**: ['Adult Paperback',\n",
+    "- **Unknown**: ['Adult Paperback',\n",
     "       \"Children's Picture Paperback\", \"Children's Paperback\",\n",
     "       \"Children's Picture Book\", 'International Collection','Caldecott/Newbery',\n",
     "       'ELL Collection', 'Holiday', 'Oversize','Bestsellers', 'Storytime Collection',\n",
@@ -1581,18 +1582,19 @@
     "       'Younger Teen  Paperback', 'Younger Teen  Audiobook', 'Readalongs',\n",
     "       'Listening Device', 'Adult Audiobook', 'Electronic',\n",
     "       \"Children's Music\", 'Adult DVD', 'Music', 'Book Discussion Kit']\n",
-    "- Audience:\n",
-    "    - **Adult**: ['Adult Non-Fiction', 'Adult Fiction', 'Adult Paperback',\n",
+    "\n",
+    "Audience:\n",
+    "- **Adult**: ['Adult Non-Fiction', 'Adult Fiction', 'Adult Paperback',\n",
     "       'Adult Reference','Adult Paperbacks Tall','Adult Audiobook','Adult DVD']\n",
-    "    - **Teen**: ['Older Teen Fiction', 'Younger Teen  Fiction', 'Teen Non-Fiction', 'Teen Reference',\n",
+    "- **Teen**: ['Older Teen Fiction', 'Younger Teen  Fiction', 'Teen Non-Fiction', 'Teen Reference',\n",
     "       'Younger Teen  Paperback', 'Younger Teen  Audiobook']\n",
-    "    - **Children**: [\"Children's Fiction\",\"Children's Picture Paperback\", \"Children's Paperback\",\n",
+    "- **Children**: [\"Children's Fiction\",\"Children's Picture Paperback\", \"Children's Paperback\",\n",
     "       \"Children's Picture Book\", \"Children's Non-Fiction\", 'Readalongs',\n",
     "       \"Children's Board Book\", \"Children's Easy Reader\", 'Storytime Collection',\n",
     "       'Preschool  Picture Book',\"Children's Easy Reader Paperback\",'Caldecott/Newbery',\n",
     "       \"Children's Non-Fiction Paperback\", \"Children's Reference\", 'Teen Reference',\n",
     "       \"Children's Music\"]\n",
-    "    - **Unknown**: ['Mystery', 'Science Fiction', 'Western','International Collection',\n",
+    "- **Unknown**: ['Mystery', 'Science Fiction', 'Western','International Collection',\n",
     "       'ELL Collection', 'Holiday', 'Natural Resources', 'Kentucky History', 'Oversize',\n",
     "       'Urban Fiction', 'Bestsellers', 'Interlibrary Loan',\n",
     "       nan, 'Laptop', 'Government Documents',\n",
@@ -1602,9 +1604,7 @@
     "Once created, we can use these columns to identify YA books as:\n",
     "- Genre = Fiction\n",
     "- Audience = Teen\n",
-    "\n",
-    "Finally - there are 140 records with no value for ItemCollection. We will remove \n",
-    "these from the data set."
+    "\n"
    ]
   }
  ],
