fix typo in explore.ipynb cleaning summary

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -1560,7 +1560,7 @@
     "   - 140 records with no value for ItemCollection. We will remove these records.\n",
     "1. Update incorrect values (PublicationYear 2109 -> 2019)\n",
     "   - 4 records have a PublicationYear = 2109. This is probably a typo. We will update these records to PublicationYear = 2019.\n",
-    "1. Add genre and audience columns:\n",
+    "1. Add genre and audience columns based on the value of ItemCollection:\n",
     "\n",
     "Genre:\n",
     "- **Fiction**: ['Adult Fiction', 'Mystery',\n",
